Fix tables top edge cutoff

--- a/app/static/stylesheets/header.css
+++ b/app/static/stylesheets/header.css
@@ -26,5 +26,5 @@ header {
 }
 
 .main-content {
-    margin-top: 4rem;
+    margin-top: 5rem;
 }
